--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -2,22 +2,22 @@
 
 \section{Hadronic models}
 
-\subsection{The model of Islam et al.}
+\em{The model of Islam et al.}
 
 \bref{islam87,islam03,islam04,islam06,islam07}
 
 \> the structure of proton is very important for low $|t|$ el. scat
 \> just putting several ideas together
 
-\subsection{The model of Petrov, Predazzi and Prokudin}
+\em{The model of Petrov, Predazzi and Prokudin}
 
 \bref{ppp03}
 
-\subsection{The model of Bourrely, Soffer and Wu}
+\em{The model of Bourrely, Soffer and Wu}
 
 \bref{wu70,bsw79,bsw84,bsw03}
 
-\subsection{The model of Block and Halzen}
+\em{The model of Block and Halzen}
 
 \bref{bh99}
 
