--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -47,6 +47,22 @@
       year           = "2008",
 }
 
+@Article{hubert,
+      author         = "Niewiadomski, Hubert",
+      title          = "{Reconstruction of protons in the TOTEM roman pot
+                        detectors at the LHC}",
+      year           = "2008",
+}
+
+@Article{vfat,
+      author       = "Aspell, P and Avati, V and Bialas, W and Kaspar, J and
+                      Kopal, J and Petäjäjärvi, J and Radicioni, E and Rouet, J
+                      and Snoeys, W and Vichoudis, P",
+      title        = "The VFAT Production Test Platform for the TOTEM Experiment",
+      year         = "2008",
+	  url		   = "http://cdsweb.cern.ch/record/1159891/files/p544.pdf"
+}
+
 
 #------------------------------------------- ELASTIC MODELS -----------------------------------------
 
@@ -255,6 +271,59 @@
       year           = "2007",
 }
 
+#--------------------------------------------- MC GENERATORS ----------------------------------------
+
+@Article{phojet,
+      author         = "Bopp, Fritz W. and Engel, R. and Ranft, J.",
+      title          = "{Rapidity gaps and the PHOJET Monte Carlo}",
+      pages          = "729-741",
+      year           = "1998",
+      eprint         = "hep-ph/9803437",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{pythia6,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{PYTHIA 6.4 Physics and Manual}",
+      journal        = "JHEP",
+      volume         = "0605",
+      pages          = "026",
+      doi            = "10.1088/1126-6708/2006/05/026",
+      year           = "2006",
+      eprint         = "hep-ph/0603175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{pythia8,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "178",
+      pages          = "852-867",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      year           = "2008",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{geant4,
+	title = "G4--a simulation toolkit",
+	journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+	volume = "506",
+	number = "3",
+	pages = "250 - 303",
+	year = "2003",
+	note = "",
+	issn = "0168-9002",
+	doi = "DOI: 10.1016/S0168-9002(03)01368-8",
+	url = "http://www.sciencedirect.com/science/article/B6TJM-48TJFY8-5/2/23ea98096ce11c1be446850c04cfa498",
+	author = "S. Agostinelli et al.",
+}
 
 #--------------------------------------------- OPTICS -----------------------------------------------
 
@@ -334,6 +403,17 @@
 	number			= "2007-005"
 	year			= "2007"
 }
+
+@Techreport{el reco,
+	author			= "Ka\v spar, J.",
+	institution		= "TOTEM",
+    title			= "Reconstruction of elastic events",
+	type			= "TOTEM-NOTE"
+	number			= "2007-007"
+	year			= "2007"
+}
+
+
 
 #-------------------------------------------- OTHER -------------------------------------------------
 
