--- a/2010/thesis/smearing.tex
+++ b/2010/thesis/smearing.tex
@@ -4,18 +4,20 @@
 \> page 29: case with small alpha
 }
 
-\subsection{Introduction}
+\> smearings
+\>> angular
+\>> energy
+\>> vertex
 
-Most Monte Carlo generators assume that incident particles of nominal energy approach each other along $z$ axis and collide at point $x = y = z = 0$. This is not the actual situation. In reality there are two bunches collided under a certain crossing angle. Within a bunch, particles do not have identical energy (energy smearing) and they are not all collinear (angular smearing). The bunches have non-zero dimensions and therefore the collision may take place at various points (vertex smearing). Our goal was to combine the smearing effects with Monte Carlo events in order to obtain a realistic simulation.
+Publised as internal note \bref{smearing}.
 
 
 \subsection{Angular and energy smearing}
 
-Let's discuss angular and energy smearing first. A collision in LAB frame (a frame bound with accelerator) is illustrated in \Fg{lab}. On the other hand, MC generators use a different frame to describe events -- a frame where incident particles have same momenta and opposite directions parallel to $z$ axis. This frame will be referred as the MC frame. Obviously, we want to find a transformation between these two frames. It will be done in two steps. 
+Let's discuss angular and energy smearing first. A collision in LAB frame (a frame bound to the accelerator). On the other hand, MC generators use a different frame to describe events -- a frame where incident particles have same momenta and opposite directions parallel to $z$ axis. This frame will be referred as the MC frame. Obviously, we want to find a transformation between these two frames. It will be done in two steps. 
 
-\fig[8cm]{fig/pdf/smearing_angles.pdf}{lab}{Sketch of angular and energy smearing.}
+%\fig[8cm]{fig/pdf/smearing_angles.pdf}{lab}{Sketch of angular and energy smearing.}
 
-\vfil\eject
 First, we find the Lorentz boost which makes incident particles have equal momenta and opposite directions. If we write the transformation of a four-momentum $(E|\vec p)$ to $(E'|\vec p')$ in the following form
 \eqref{\eqalign{
 E'      &= \ga\,(E - \vec p\cdot\vec\be)\cr
@@ -23,39 +25,31 @@ E'      &= \ga\,(E - \vec p\cdot\vec\be)\cr
 }\qquad\eqalign{
 \be &= |\vec\be|\cr
 \ga &= {1\over\sqrt{1 - \be^2}}\cr}
-\ ,}{lorentz}
+\ ,}{sm lorentz}
 one can find that the $\vec\be$ needed for our purpose is
-\eqref{\vec\be = {\vec p_1 + \vec p_2\over E_1 + E_2}\ ,}{beta}
+\eqref{\vec\be = {\vec p_1 + \vec p_2\over E_1 + E_2}\ ,}{sm beta}
 where $\vec p_1, \vec p_2$ are the momenta and $E_1, E_2$ are the energies of the incident particles in the LAB frame. Let's denote this transformation $L(\vec\be)$ and the boosted momenta of the incident particles $\vec p_1'$ and $\vec p_2'$.
 
 In the second step, we rotate the vectors $\vec p_1'$ and $\vec p_2'$ to be parallel to the MC frame $z$ axis. We use Rodrigues' formula to describe the rotation of a vector $\vec v$ around a unit vector (axis) $\vec a$:
-\eqref{R(a, \om)\, \vec v = \vec v\,\cos\om + \vec a\times\vec v\,\sin\om + \vec a\cdot\vec v\,\vec a\,(1 - \cos\om)\ .}{rotation}
+\eqref{R(a, \om)\, \vec v = \vec v\,\cos\om + \vec a\times\vec v\,\sin\om + \vec a\cdot\vec v\,\vec a\,(1 - \cos\om)\ .}{sm rotation}
 For our purpose, one may identify\footnote{In fact, this is just one of the possible solutions, rotation around $\vec a$ axis is arbitrary.}
-\eqref{\vec a = {\vec p_1' \times \hat z\over |\vec p_1' \times \hat z|}, \qquad \cos\om = {\vec p_1' \cdot \hat z\over |\vec p_1'|}}{axis angle}
+\eqref{\vec a = {\vec p_1' \times \hat z\over |\vec p_1' \times \hat z|}, \qquad \cos\om = {\vec p_1' \cdot \hat z\over |\vec p_1'|}}{sm axis angle}
 where $\hat z$ is the unit vector in the $z$ direction in the frame after the boost. Obviously, the coordinate representation is $\hat z = (0, 0, 1)$.
 
 Unfortunately, this is not the full story. MC generators usually produce events for a fixed center-of-mass energy $\sqrt{s}$. However, in the real case, $\sqrt{s}$ varies slightly due to the smearing effects. Since the variation is small it might be neglected. But for consistency reason, one had better make sure that the scattering products sum up to the same $\sqrt{s}$ as for which the event has been produced. There is generally no correct way how to accomplish that. Nevertheless, as the variations are small, it does not matter much. Therefore, let's scale the energy of the outgoing particles
-\eqref{E_i^{\rm MC} \rightarrow \chi\, E_i^{\rm MC},\qquad \chi = \sqrt{s_{\rm LAB}\over s_{\rm MC}}\ .}{energy scaling}
+\eqref{E_i^{\rm MC} \rightarrow \chi\, E_i^{\rm MC},\qquad \chi = \sqrt{s_{\rm LAB}\over s_{\rm MC}}\ .}{sm energy scaling}
 The momenta of the particles are scaled such that their masses are preserved.
 
 To summarize, if $(E|\vec p)_{\rm MC}$ is the four-momentum for a particle produced in a MC event, then the LAB four-momentum can be written
-\eqref{(E|\vec p)_{LAB} = L(-\vec\be)\,R(\vec a, -\om)\, S(\chi)\, (E|\vec p)_{MC}\ ,}{mc to lab}
+\eqref{(E|\vec p)_{LAB} = L(-\vec\be)\,R(\vec a, -\om)\, S(\chi)\, (E|\vec p)_{MC}\ ,}{sm mc to lab}
 where $S(\chi)$ stands for the energy scaling procedure.
 
 
 \ssubsection{Simulation}
 
-So far, the smearing effects have been discussed on a general level. Now, let us turn to the question how to simulate them. Following \Fg{lab}, it is natural to parameterize LAB momenta as
-\eqref{\vec p_1 = p_{\rm nom}\, (1 + \xi_1)\,\pmatrix{\sin\th_1\cos\ph_1\cr \sin\th_1\sin\ph_1\cr \cos\th_1\cr},\qquad \vec p_2 = - p_{\rm nom}\, (1 + \xi_2)\,\pmatrix{\sin\th_2\cos\ph_2\cr \sin\th_2\sin\ph_2\cr \cos\th_2\cr} \ ,}{mom par 1}
-where $p_{\rm nom}$ is the nominal momentum, i.e. $7\un{TeV}$ for LHC. The $\xi$ factor is related to the energy smearing. It is natural to assume that it follows normal distribution $N(\bar\xi, \si_\xi^2)$, where $\bar\xi$ is the energy offset and $\si_\xi$ is the energy variation. $\xi_1$ and $\xi_2$ shall be treated as independent. The $\th$ and $\ph$ variables refer to the angular smearing. It is natural to simulate $\ph$ according to uniform distribution $U(0, 2\pi)$ and $\th$ to normal distribution $N(0, \si_\th^2)$. But since $\th$ shall be positive, only the positive part of $N(0, \si_\th^2)$ must be considered. 
-
-Parameterization \Eq{mom par 1} is not the only admissible one. Actually, the preferred parameterization to describe the smearing effects in the LHC is the following
-\eqref{\vec p_1 = p_{\rm nom}\, (1 + \xi_1)\,\pmatrix{S_1\cr C_1\cr \sqrt{1 - S_1^2 - C_1^2}\cr},\qquad \vec p_2 = - p_{\rm nom}\, (1 + \xi_2)\, \pmatrix{S_2\cr C_2\cr \sqrt{1 - S_2^2 - C_2^2}\cr}\ ,}{mom par 2}
-with $S_{1,2}$ and $C_{1,2}$ following a normal distribution $N(0, \si_\th^2)$. In fact, the tails of the normal distribution must be cut off since the parameterization requires $S_{1,2}^2 + C_{1,2}^2 \leq 1$. But as any realistic $\si_\th \ll 1$, the effect is negligible. The distributions of $\xi$'s are the same as for parameterization \Eq{mom par 1}.
-
-Regarding the case with non-zero crossing angle $\al$ (see \Fg{vertex smearing}), one may use a better parameterization than the ones above. For instance, the parameterization \Eq{mom par 2} may be modified to
-\eqref{\vec p_1 = p_{\rm nom}\,(1 + \xi_1)\,\pmatrix{\cos\al & 0 & \sin\al\cr 0 & 1 & 0 \cr -\sin\al & 0 & \cos\al\cr}\,\pmatrix{S_1\cr C_1\cr \sqrt{1 - S_1^2 - C_1^2}}\.}{momentum par crossing}
-and analogically for $\vec p_2$, just with $-\al$ instead of $\al$. The advantage is clear, $S_{1,2}$ and $C_{1,2}$ can still be regarded as small perturbations. For the parameterization \Eq{mom par 1}, the crossing-angle treatment is analogical. 
+The \Eq{sm mc to lab} provides a method to apply angular and energy smearing to MC particles. The missing step to have a smearing MC generator are the distributions of the quantities $\vec\be$, $\vec a$, $\om$ and $\ch$. But these can be calculated from beam smearing parameters as discussed in \Sc{pr transport}. Assuming the crossing angle $\al$ \TODO{picture?}, one can parameterize the momenta of the incident particles as
+\eqref{\vec p_i = \pm p_{\rm nom}\,(1 + \xi_i)\,\pmatrix{\cos\al & 0 & \mp \sin\al\cr 0 & 1 & 0 \cr \pm\sin\al & 0 & \cos\al\cr}\,\pmatrix{C_i\cr S_i\cr \sqrt{1 - C_i^2 - S_i^2}}\ ,}{sm momenta par}
+where $i\in {1, 2}$ and the upper/bottom sign corresponds to particle 1/2. $C_i$ and $S_i$ describe the angular smearing in X and Y and according to \Eq{to beam div} one assign them distributions $N(0, \si_\th^2)$. In fact, the tails of the normal distribution must be cut off since the parameterization requires $S_{1,2}^2 + C_{1,2}^2 \leq 1$. But as any realistic $\si_\th \ll 1$, the effect is negligible. The $\xi$ parameter accounts for the energy smearing, the expected distribution is $N(\bar\xi, \si_\xi^2)$ (see \Eq{to energy fl}).
 
 \ssubsection{Explicit formulae for forward particles}
 
@@ -127,8 +121,3 @@ This means that the random variables $x$ and $t$ are not independent. But as we 
 \eqref{h(x, y, z) \propto \exp\left[- {\cos^2\al\over\si^2_x} x^2 - {y^2\over\si^2_y} - \left({\sin^2\al\over\si^2_x} + {\cos^2\al\over\si^2_z}\right)z^2\right]\.}{vertex distribution}
 We can see that the vertex distribution retains a Gaussian form. The mean values of $x, y$ and $z$ are zero while the effective variations are
 \eqref{\si_{x,\rm ef\!f} = {\si_x\over\sqrt{2}\cos\al},\quad \si_{y,\rm ef\!f} = {\si_y\over\sqrt{2}},\quad \si_{z,\rm ef\!f} = {\si_z\over\sqrt{2}}\,{\si_x\over\sqrt{\si_z^2\sin^2\al + \si_x^2\cos^2\al}} \.}{effective variations}
-
-
-\subsection{Conclusion}
-
-We have described the angular and the energy smearing by \Eq{mc to lab} and parameterized by \Eq{momentum par crossing}. We have shown that the distribution of vertices is a Gaussian with zero mean values and variances given by \Eq{effective variations}. These formulae has become the heart of a TOTEM software package which is used to include the smearing effects to physics simulations.
