--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -52,11 +52,12 @@
 
 \BeginText
 
-%\input introduction.tex
-%\input elastic.tex
+\input introduction.tex
+\input elastic.tex
+\input totem.tex
 \input simu_reco.tex
 \input alignment.tex
-%\input sigma_tot.tex
+\input sigma_tot.tex
 
 \appendices
 
