--- a/2010/thesis/elasticReco.tex
+++ b/2010/thesis/elasticReco.tex
@@ -1,3 +1,5 @@
+Publised as internal note \bref{el reco}.
+
 \subsection[intro]{Introduction}
 
 The step which precedes the elastic reconstruction is fit on one-RP level. The results of that step are local track fits, i.e. positions $x, y$ and angles $\th_x, \th_y$ (plus covariance matrix for all these parameters). However, one RP (ca $3\un{cm}$ thick) presents a lever-arm too small for an interesting angular measurement, see \Fg{theta local reco}. And therefore, only position information can be used for fitting.
