--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -29,6 +29,14 @@ matrix				& $\mat M$				& slanted\cr\ln
 
 \> def of luminosity
 
+One of the definitions of cross-section $\si$ relates it to the corresponding number of events $N$ per time
+\eqref{{\d N\over \d t} = \si\,j\,n_T\.}{in cross-section}
+$j$ denotes the flux of bombarding particles and $n_T$ is the number of target particles. This formula can be written in a more general form
+\eqref{N = \si\,{\cal L}_{int},\qquad {\cal L}_{int} = \int\d t\,\d x\,\d y\,\d z\, j(x, y, z; t)\, \rh_T(x, y, z; t), }{in luminosity}
+where ${\cal L}_{int}$ is the integrated luminosity in a given time interval and $\rh_T$ is the density of target particles.
+
+
+
 \> optical theorem
 \>> neglecting spins - several amplitudes, how to treat them in the optical theorem - Formanek
 
