--- a/2010/thesis/simu_reco.tex
+++ b/2010/thesis/simu_reco.tex
@@ -59,9 +59,110 @@ Elegent is acronym for ELastic Event GENeraTor.
 
 \section[beam smearing]{Beam smearing}
 
-Most Monte Carlo generators assume that incident particles of nominal energy approach each other along $z$ axis and collide at point $x = y = z = 0$. This is not the actual situation. In reality there are two bunches collided under a certain crossing angle. Within a bunch, particles do not have identical energy (energy smearing) and they are not all collinear (angular smearing). The bunches have non-zero dimensions and therefore the collision may take place at various points (vertex smearing). Our goal was to combine the smearing effects with Monte Carlo events in order to obtain a realistic simulation.
+The aim of this module is to include beam smearing effects that are usually not considered by event generators. As it has been mentioned above, the beam smearing comprises three components: \em{angular smearing} (the particles in a bunch are not all parallel), \em{energy smearing} (there is energy fluctuation within a bunch) and \em{vertex smearing} (the bunches have non-zero dimensions, hence the interactions can take place in various space points).
 
-\input smearing.tex
+This section is an updated version the internal note \bref{smearing}.
+
+
+\subsection{Angular and energy smearing}
+
+Let's discuss angular and energy smearing first. A collision in LAB frame (a frame bound to the accelerator). On the other hand, MC generators use a different frame to describe events -- a frame where incident particles have same momenta and opposite directions parallel to $z$ axis. This frame will be referred as the MC frame. Obviously, we want to find a transformation between these two frames. It will be done in two steps. 
+
+First, we find the Lorentz boost which makes incident particles have equal momenta and opposite directions. If we write the transformation of a four-momentum $(E|\vec p)$ to $(E'|\vec p')$ in the following form
+\eqref{\eqalign{
+E'      &= \ga\,(E - \vec p\cdot\vec\be)\cr
+\vec p' &= \vec p  +  (\ga - 1) {\vec p \cdot \vec \be\over \be^2}\vec\be - \ga E \vec\be\cr
+}\qquad\eqalign{
+\be &= |\vec\be|\cr
+\ga &= {1\over\sqrt{1 - \be^2}}\cr}
+\ ,}{sm lorentz}
+one can find that the $\vec\be$ needed for our purpose is
+\eqref{\vec\be = {\vec p_1 + \vec p_2\over E_1 + E_2}\ ,}{sm beta}
+where $\vec p_1, \vec p_2$ are the momenta and $E_1, E_2$ are the energies of the incident particles in the LAB frame. Let's denote this transformation $L(\vec\be)$ and the boosted momenta of the incident particles $\vec p_1'$ and $\vec p_2'$.
+
+In the second step, we rotate the vectors $\vec p_1'$ and $\vec p_2'$ to be parallel to the MC frame $z$ axis. We use Rodrigues' formula to describe the rotation of a vector $\vec v$ around a unit vector (axis) $\vec a$:
+\eqref{R(a, \om)\, \vec v = \vec v\,\cos\om + \vec a\times\vec v\,\sin\om + \vec a\cdot\vec v\,\vec a\,(1 - \cos\om)\ .}{sm rotation}
+For our purpose, one may identify\footnote{In fact, this is just one of the possible solutions, rotation around $\vec a$ axis is arbitrary.}
+\eqref{\vec a = {\vec p_1' \times \hat z\over |\vec p_1' \times \hat z|}, \qquad \cos\om = {\vec p_1' \cdot \hat z\over |\vec p_1'|}}{sm axis angle}
+where $\hat z$ is the unit vector in the $z$ direction in the frame after the boost. Obviously, the coordinate representation is $\hat z = (0, 0, 1)$.
+
+Unfortunately, this is not the full story. MC generators usually produce events for a fixed center-of-mass energy $\sqrt{s}$. However, in the real case, $\sqrt{s}$ varies slightly due to the smearing effects. Since the variation is small it might be neglected. But for consistency reason, one had better make sure that the scattering products sum up to the same $\sqrt{s}$ as for which the event has been produced. There is generally no correct way how to accomplish that. Nevertheless, as the variations are small, it does not matter much. Therefore, let's scale the energy of the outgoing particles
+\eqref{E_i^{\rm MC} \rightarrow \chi\, E_i^{\rm MC},\qquad \chi = \sqrt{s_{\rm LAB}\over s_{\rm MC}}\ .}{sm energy scaling}
+The momenta of the particles are scaled such that their masses are preserved.
+
+To summarize, if $(E|\vec p)_{\rm MC}$ is the four-momentum for a particle produced in a MC event, then the LAB four-momentum can be written
+\eqref{(E|\vec p)_{LAB} = L(-\vec\be)\,R(\vec a, -\om)\, S(\chi)\, (E|\vec p)_{MC}\ ,}{sm mc to lab}
+where $S(\chi)$ stands for the energy scaling procedure.
+
+
+\fig[8cm]{fig/pdf/smearing_angular_energy.pdf}{smearing angular energy}{Sketch of angular and energy smearing in XZ plane.}
+
+The above formula provides a method to apply angular and energy smearing to MC particles. The missing step to have a smearing MC generator is to know the distributions of the quantities $\vec\be$, $\vec a$, $\om$ and $\ch$. But these can be calculated from beam smearing parameters as discussed in \Sc{pr transport}. Assuming the crossing angle $\al$, see \Fg{smearing angular energy}, one can parameterize the momenta of the incident particles as
+\eqref{\vec p_i = \pm p_{\rm nom}\,(1 + \xi_i)\,\pmatrix{\cos\al & 0 & \mp \sin\al\cr 0 & 1 & 0 \cr \pm\sin\al & 0 & \cos\al\cr}\,\pmatrix{C_i\cr S_i\cr \sqrt{1 - C_i^2 - S_i^2}}\ ,}{sm momenta par}
+where $i\in {1, 2}$ and the upper/bottom sign corresponds to particle 1/2. $C_i$ and $S_i$ describe the angular smearing in X and Y and according to \Eq{to beam div} one assign them distributions $N(0, \si_\th^2)$. In fact, the tails of the normal distribution must be cut off since the parameterization requires $S_{1,2}^2 + C_{1,2}^2 \leq 1$. But as any realistic $\si_\th \ll 1$, the effect is negligible. The $\xi$ parameter accounts for the energy smearing, the expected distribution is $N(\bar\xi, \si_\xi^2)$ (see \Eq{to energy fl}).
+
+The smearing effects and the crossing angle are rather small: $\si_\th \sim \O{10^{-6}}$, $\al \sim \O{10^{-4}}$ and $\si_\xi \sim \O{10^{-4}}$ (see \Sc{pr transport}). Therefore, one may simplify \Eq{sm mc to lab} by keeping just the first oder terms. It will yield an easily iterpretable forumula which will become useful reconstruction uncertainty estimates. Also, bearing in mind the LHC energies, we will approximate $E\approx p$ for all the particles involved.
+
+In this approximation \Eq{sm beta} gives
+\eqref{\vec\be \simeq {1\over 2}\pmatrix{-2\al + C_1 - C_2\cr S_1 - S_2\cr \xi_1 - \xi_2}}{sm beta expl}
+and thus $\ga\simeq 1$ (all other terms are of second and higher orders). Then, the Lorentz boost \Eq{sm lorentz} and rotation \Eq{sm rotation} simplify to
+\eqref{\vec p' \simeq \vec p - |\vec p| \vec\be,\qquad E' \simeq E - \vec p\cdot\vec\be\ ,}{sm lorentz expl}
+\eqref{R(\vec a, \om)\,\vec v \simeq \vec v + {1\over 2}\pmatrix{S_1 + S_2\cr -C_1 - C_2\cr 0} \times \vec v\ .}{sm rotation expl}
+The energy scaling factor turns out
+\eqref{\ch \simeq 1 + {\xi_1 + \xi_2\over 2}\ .}{sm energy scaling expl}
+
+Now we are ready to apply \Eq{sm mc to lab} to an outgoing (MC generated) particle with momentum $\vec p_{\rm MC}$. Let's limit ourselves to particles that can reach Roman Pot stations, that means particles scattered to small angles $\th \leq 10^{-3}$. A convenient parameterization, thus, is
+\eqref{\vec p_{\rm MC} = \pm p\,\pmatrix{\th\cos\ph\cr \th\sin\ph\cr 1\cr} \.}{sm diff mc}
+The particles with $+$ sign can be detected in the right arm stations, with $-$ sign in the left arm. Still working in the leading approximation, one finds
+\eqref{\vec p_{\rm LAB} = \pm p\,\pmatrix{\th\cos\ph + \De\th_x\cr \th\sin\ph + \De\th_y\cr 1 + \xi\cr},
+\quad \xi = \left\{\matrix{\xi_1\cr\cr \xi_2}\right.,
+\quad \De\th_x = \left\{\matrix{C_1 - \al\cr\cr C_2 + \al\cr}\right.,
+\quad \De\th_y = \left\{\matrix{S_1\qquad\hbox{for right arm}\cr\cr S_2\qquad\hbox{ for left arm}\cr}\right.\ .}{sm diff lab} %}}}
+
+The interpretation is quite intuitive. Let us take, for instance, a forward proton targeting the right arm and let us focus on the X projection. Its full scattering angle is a sum of three components: the original (MC) scattering angle ($\th\cos\ph$), crossing angle ($-\al$) and the X component of the beam divergence ($C_1$). The proton inherits the energy shift $\xi_1$ from the first incident proton.
+
+\iffalse
+Using the statistical properties suggested in the previous section yields the following relation between variances (recalling $\si_\th$ refers to the beam divergence)
+\eqref{\si_{\De\th_x} = \si_{\De\th_y} = \si_{C_1} = \si_{C_2} = \si_{S_1} = \si_{S_2} = \cases{
+{\si_\th\over\sqrt2}\qquad\hbox{for parameterization \Eq{mom par 1}}\cr
+\si_\th\qquad\hbox{for parameterization \Eq{mom par 2}}\cr
+}\ .}{delta th sigma}
+\fi
+
+
+\subsection{Vertex smearing}
+
+\fig[8cm]{fig/pdf/smearing_vertex.pdf}{smearing vertex}{Bunch collision with crossing angle $\al$.}
+
+\Eq{in luminosity}, one of the luminosity definitions, suggests that function
+\eqref{h(x, y, z; t) = {1\over {\cal L}_{int}}\,j(x, y, z; t)\ \rh_T(x, y, z; t)}{sm pdf}
+can be interpreted as the probability density function of finding an interaction (vertex) at position $(x, y, z)$ and time $t$. Recalling that $j$ stands for the flux of bombarding particles and $\rh_T$ is the density of target particles. This formula can well be adatped for a collision of two bunches, as depicted in \Fg{smearing vertex}. The two bunches, each propagating (in the LAB frame) with speed $v$, are collided under a crossing angle $\al$. The flux $j$ in \Eq{sm pdf} can be expressed as $v_{\rm rel}\,\rh$, where $v_{\rm rel} = 2v\cos\al$ is the relative velocity of the two bunches and $\rh$ is the density of one of them. Therefore one can write
+\eqref{h(x, y, z; t) = {2v\cos\al\over {\cal L}_{int}}\ \rh_1(x, y, z; t)\, \rh_2(x, y, z; t)\.}{sm pdf2}
+The $\rh_{1,2}$ densities correspond to the two bunches (note that the formula is symmetric against swap of the two bunches, as it should be).
+
+If $\rh_0(\tilde x, \tilde y, \tilde z)$ is a (time-independent) particle density in the rest frame of bunch 2 (the tilded frame in \Fg{smearing vertex}), then the (time-dependent) particle density $\rh_2(x, y, z)$ in the LAB frame (the non-tilded one) can be obtained by means of coordinate transformation (we assume that the origins of the tilded and the non-tilded frame coincide in $t=t'=0$)
+\eqref{\eqnarray{
+\tilde x &= x\cos\al\ - z\sin\al \cr
+\tilde y &= y\cr
+\tilde z &= \ga \left( z\cos\al\ + x\sin\al + vt \right),\qquad \ga = {1\over\sqrt{1 - v^2}}\ .\cr
+}}{sm coord trans}
+The result reads
+\eqref{\rh_2(x, y, z; t) = \ga\, \rh_0\Big(x\cos\al - z\sin\al, y, \ga(z\cos\al + x\sin\al + vt) \Big)\ .}{sm density2}
+The overall factor $\ga$ is needed to preserve normalization:
+\eqref{\int \rh_0(\tilde x, \tilde y, \tilde z)\ \d\tilde x\d\tilde y\d\tilde z = \int \rh_2(x, y, z)\ \d x\d y\d z\ .}{sm rho normalization}
+The density for bunch 1 can be obtained analogically
+\eqref{\rh_1(x, y, z; t) = \ga\, \rh_0\Big(x\cos\al + z\sin\al, y, \ga(z\cos\al - x\sin\al - vt) \Big)\ .}{sm density1}
+
+The Lorentz contracted particle density of each bunch can be well approximated by a Gaussian \TODO{reference}
+\eqref{\ga \rh_0(x, y, \ga z) = {n_B\over (2\pi)^{3/2}\si_x\si_y\si_z}\,\exp\left(-{ x^2\over 2\si_x^2}-{ y^2\over 2\si_y^2}-{ z^2\over 2\si_z^2}\right),}{sm density}
+where $n_B$ is the number of protons in a bunch and the variances $\si_x, \si_y$ and $\si_z$ refer to the bunch dimensions in the LAB frame.
+
+Inserting \Eq{sm density1,sm density2,sm density} to \Eq{sm pdf2} yields
+\eqref{h(x, y, z; t) \propto \exp\left[- {\cos^2\al\over\si^2_x} x^2 - {y^2\over\si^2_y} - \left({\sin^2\al\over\si^2_x} + {\cos^2\al\over\si^2_z}\right)z^2 - {(vt + x\sin\al)^2\over\si^2_z}\right]\.}{sm vertex full distribution}
+This means that the random variables $x$ and $t$ are not independent. But as we are not interested in the time of collision, we can integrate over the time $t$ and obtain the \hbox{p.d.f.} only for the spatial coordinates of the vertex
+\eqref{h(x, y, z) \propto \exp\left[- {\cos^2\al\over\si^2_x} x^2 - {y^2\over\si^2_y} - \left({\sin^2\al\over\si^2_x} + {\cos^2\al\over\si^2_z}\right)z^2\right]\.}{sm vertex distribution}
+We can see that the vertex distribution retains a Gaussian form. The mean values of $x, y$ and $z$ are zero while the effective variations are
+\eqref{\si_{x,\rm ef\!f} = {\si_x\over\sqrt{2}\cos\al},\quad \si_{y,\rm ef\!f} = {\si_y\over\sqrt{2}},\quad \si_{z,\rm ef\!f} = {\si_z\over\sqrt{2}}\,{\si_x\over\sqrt{\si_z^2\sin^2\al + \si_x^2\cos^2\al}} \.}{sm effective variations}
 
 \section[fast simu]{Fast simulation}
 
