--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -21,6 +21,8 @@
 
 %\def\FootText{(VERSION 1)}
 
+\def\pmt#1{\hbox{\tt[#1]}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \centerline{\fPbxiv Charles University in Prague}
